# mydb-server

./: .cirrus.yml  CMakeLists.txt  MYSQL_VERSION  README  README.md  VERSION  azure-pipelines.yml  config.h.cmake  configure.cmake  gitflic-ci.yaml
.gitflic/: debug.sh
build-ps/: build-binary.sh  percona-server-8.0_builder.sh  percona-server.spec
client/: CMakeLists.txt  mysql.cc  mysqlbinlog.cc  mysqldump.c  mysqldump.cc  mysqltest.cc
cmake/: boost.cmake  component.cmake  curl.cmake  libutils.cmake  package_name.cmake  plugin.cmake  readline.cmake  v8.cmake
components/js_lang/: CMakeLists.txt  README.md  component.cc  js_lang_common.h  js_lang_core.cc  js_lang_core.h  js_lang_param.cc  js_lang_udf.cc
doc/: requirements.txt
include/: mem_root_deque.h  my_compiler.h  my_sys.h  mysql.h.pp  welcome_copyright_notice.h
libmysql/: CMakeLists.txt  libmysql.cc
man/: comp_err.1  ibd2sdi.1  innochecksum.1  lz4_decompress.1  my_print_defaults.1  myisam_ftdump.1  myisamchk.1  myisamlog.1  myisampack.1  mysql.1  mysql.server.1  mysql_config.1  mysql_config_editor.1  mysql_migrate_keyring.1  mysql_secure_installation.1  mysql_ssl_rsa_setup.1  mysql_tzinfo_to_sql.1  mysql_upgrade.1  mysqladmin.1  mysqlbinlog.1  mysqlcheck.1  mysqld.8  mysqld_multi.1  mysqld_safe.1  mysqldump.1  mysqldumpslow.1  mysqlimport.1  mysqlpump.1  mysqlrouter.1  mysqlrouter_keyring.1  mysqlrouter_passwd.1  mysqlrouter_plugin_info.1  mysqlshow.1  mysqlslap.1  ndb_blob_tool.1  ndb_config.1  ndb_delete_all.1  ndb_desc.1  ndb_drop_index.1  ndb_drop_table.1  (+27 more)
mysql-test/: lsan.supp  mysql-test-run.pl
(+367 files in other folders)
